@@ -4,11 +4,11 @@ rmdir /s /q build
 rmdir /s /q __pycache__
 rmdir /s /q dist
 
-pyinstaller --clean --noupx -w -i px.ico px.py
-copy px.ini dist\px\.
-copy *.txt dist\px\.
-upx --best dist\px\*.pyd
-upx --best dist\px\py*.dll
+pyinstaller --clean --noupx -w -F -i px.ico px.py
+copy px.ini dist\.
+copy *.txt dist\.
+upx --best dist\px.exe -o dist\px.tmp
+move /Y dist\px.tmp dist\px.exe
 
 del /q px.spec
 rmdir /s /q build
